--- a/config.yml
+++ b/config.yml
@@ -4,27 +4,65 @@ recipe: default.v1
 
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: en
+language: pt
 
 pipeline:
-# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
-# # If you'd like to customize it, uncomment and adjust the pipeline.
-# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
+  # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
+  # # If you'd like to customize it, uncomment and adjust the pipeline.
+  # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
+  - name: SpacyNLP
+    model: pt_core_news_lg
+    case_sensitive: False
+  - name: SpacyTokenizer
+    "intent_tokenization_flag": False
+    "intent_split_symbol": "_"
+    "token_pattern": None
+  - name: SpacyFeaturizer
+
+  - name: DIETClassifier
+    epochs: 100
+    constrain_similarities: true
+  - name: EntitySynonymMapper
+  - name: SpacyEntityExtractor
+
+  #   #JUAN
+  # - name: "SpacyNLP"
+  #   model: "pt_core_news_md"
+  # - name: SpacyTokenizer
+  # - name: SpacyFeaturizer
+  # #- name: WhitespaceTokenizer
+  # - name: RegexFeaturizer
+  # - name: LexicalSyntacticFeaturizer
+  #   "features": [
+  #       ["suffix3"], # features from token before current one
+  #       ["title", "digit", "BOS", "EOS"], # features from current token
+  #       ["title"], # features from token after the current one
+  #     ]
+  # - name: CountVectorsFeaturizer
+  # - name: CountVectorsFeaturizer
+  #   analyzer: char_wb
+  #   min_ngram: 1
+  #   max_ngram: 4
+  # - name: DIETClassifier
+  #   epochs: 100
+  #   constrain_similarities: true
+  # - name: EntitySynonymMapper
+  # - name: ResponseSelector
+  #   epochs: 100
+  #   constrain_similarities: true
+  # - name: FallbackClassifier
+  #   threshold: 0.3
+  #   ambiguity_threshold: 0.1
+
+
+
+
 #   - name: WhitespaceTokenizer
 #   - name: RegexFeaturizer
 #   - name: LexicalSyntacticFeaturizer
-#   - name: CountVectorsFeaturizer
-#   - name: CountVectorsFeaturizer
-#     analyzer: char_wb
-#     min_ngram: 1
-#     max_ngram: 4
-#   - name: DIETClassifier
-#     epochs: 100
-#     constrain_similarities: true
-#   - name: EntitySynonymMapper
-#   - name: ResponseSelector
-#     epochs: 100
-#     constrain_similarities: true
+  # - name: ResponseSelector
+  #   epochs: 100
+  #   constrain_similarities: true
 #   - name: FallbackClassifier
 #     threshold: 0.3
 #     ambiguity_threshold: 0.1
