--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,30 +1,23 @@
 version: "3.1"
 
 stories:
+  - story: interactive_story_1
+    steps:
+      - intent: greet
+      - action: utter_greet
+      - intent: inform_name
+        entities:
+          - PER: Thais
+      - action: name_form
+      - active_loop: name_form
+      - slot_was_set:
+          - name: Thais
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: utter_ask_help
 
-- story: happy path
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
+  # - story: solicitar comprovante matricula
+  #   steps:
+  #     - intent: request_register
 
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
