--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -90,9 +90,10 @@ nlu:
     - rematricula
     - como fazer a rematricula 
 
-# - intent: request_historic
-#   examples: |
-#     - gostaria do meu historico escolar
+- intent: request_historic
+  examples: |
+    - gostaria do meu historico escolar
+    - historico escolar
 
 
 - intent: request_email
@@ -106,87 +107,100 @@ nlu:
     - contato dos professores
     - email dos professores do curso [sistemas da informação]
 
-
-
 # # novos intents
-# - intent: ask_aulas_geral
-#   examples: |
-#     - preciso da grade de horarios de aulas
-#     - preciso saber das disciplians do semestre
-#     - grade curricular do [primeiro] semestre de [2022]
-#     - grade de disciplinas
-#     - grade de materias
-#     - grade disciplinar
-#     - disciplinas
-#     - grade curricular
-#     - aulas
-#     - materias do [segundo] semestre 
-#     - discplinas [primeiro]
-#     - aulas de [2022]
-#     - informações sobre as aulas
-#     - professores deste semestre [segundo]
-#     - quais professores são no semestre [primeiro]
-#     - professores das disciplinas do [primeiro] semestre
-#     - [primeiro]
-#     - [segundo]
-#     - dia de inicio de aulas
-#     - inicio das aulas
-#     - começo das aulas
-#     - inicio
-#     - reinicio
-#     - aulas comecam no ano (ano)
-#     - aulas começam
-#     - quando aulas começam
-#     - começo
-#     - perído letivo
-#     - início das férias de inverno
-#     - início das férias de verão
-#     - férias
-# - intent: ask_cursos
-#   examples: |
-#     - cursos do IFRS
-#     - cursos do IFRS de Rio Grande
-#     - cursos oferecidos
-#     - cursos ofertados
-#     - cursos disponíveis
-#     - IFRS no rio grande do sul
-#     - IFRS no estado
-#     - Instituto Federal do Rio grande do Sul no estado
-#     - locais de IFRS
-#     - cursos integrantes do IFRS
-#     - cursos de pós-graduação
-#     - quais os cursos livres ofertados
-#     - tipos de cursos
-#     - calendário
-# - intent: ask_documentacao
-#   examples: |
-#     - enviar documentos
-#     - documentos
-#     - quais documentos preciso
-#     - documentos
-#     - solicitar documentos
-#     - documento 
-#     - quais documento
-#     - qual documento
-#     - quais documentos
-#     - colar grau
-#     - documento para colar grau
-#     - o que fazer para colar grau
-#     - inserir publicação
-#     - enviar artigo 
-#     - artigo submeter ao sistema
-# - intent: ask_complementar_estagio
-#   examples: |
-#     - validar hora complementar 
-#     - inserir hora complementar
-#     - quais atividades complementares posso usar
-#     - carga horaria de atividade complementar
-#     - atividades complementares
-#     - o que são horas complementares
-#     - atividades adicionais
-#     - estagio 
-#     - hora de estagio
-#     - fazer estagio
-#     - legislação do estágio
-#     - regimento do IFRS
-#     - regimento
+- intent: request_classes
+  examples: |
+    - preciso da grade de horarios de aulas
+    - preciso saber das disciplians do semestre
+    - grade curricular do [primeiro] semestre de [2022]
+    - grade de disciplinas
+    - grade de materias
+    - grade disciplinar
+    - disciplinas
+    - grade curricular
+    - aulas da grade do curso [curso]
+    - materias do [segundo] semestre 
+    - disciplinas [primeiro]
+    - aulas de [2022]
+    - informações sobre as aulas
+    - [primeiro]
+    - [segundo]
+
+- intent: request_calendar
+  examples: |
+    - dia de inicio de aulas
+    - inicio das aulas
+    - começo das aulas
+    - inicio
+    - reinicio
+    - aulas comecam no ano (ano)
+    - aulas começam
+    - quando aulas começam
+    - começo
+    - perído letivo
+    - início das férias de inverno
+    - início das férias de verão
+    - férias
+    - fim das férias de verão
+    - fim das ferias de inverno
+    - fim das ferias
+
+- intent: request_courses
+  examples: |
+    - cursos do IFRS
+    - cursos do IFRS de Rio Grande
+    - cursos oferecidos
+    - cursos ofertados
+    - cursos disponíveis
+    - IFRS no rio grande do sul
+    - IFRS no estado
+    - cursos integrantes do IFRS
+    - cursos de pós-graduação IFRS Rio Grande
+    - quais os cursos livres ofertados 
+    - tipos de cursos
+    - quais cursos
+    - EAD
+    
+
+- intent: request_documentation
+  examples: |
+    - enviar documentos
+    - documentos
+    - quais documentos preciso
+    - como enviar documentos
+    - solicitar documentos
+    - documento 
+    - quais documento
+    - qual documento
+    - quais documentos
+    - quais documentos levar no IFRS
+
+- intent: request_degree
+    - colar grau
+    - documento para colar grau
+    - o que fazer para colar grau
+    - como solicitar o fim dos meus estudos
+    - documentos para pedir a colação de grau do curso [nome_curso]
+
+- intent: request_activities
+  examples: |
+    - validar hora complementar 
+    - inserir hora complementar
+    - quais atividades complementares posso usar
+    - carga horaria de atividade complementar
+    - atividades complementares
+    - o que são horas complementares
+    - atividades adicionais
+
+- intent: request_internship
+  examples: |
+    - estagio 
+    - hora de estagio
+    - fazer estagio
+    - onde posso fazer estágio 
+
+- intent: request_laws
+  examples: |
+    - legislação do estágio
+    - regimento do estágio IFRS
+    - regimento estágio
