--- a/data/stories.yml
+++ b/data/stories.yml
@@ -16,23 +16,26 @@ stories:
           - requested_slot: null
       - active_loop: null
       - action: utter_ask_help
+      - checkpoint: check_ask_help
 
-  # - story: solicitar comprovante matricula
-  #   steps:
-  #     - intent: request_register
-  #     - action: action_faq_comprovate
+  - story: solicitar comprovante matricula
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_doc_register
+      - action: action_faq_comprovate
 
-  # - story: solicitar contato de professores
-  #   steps:
-  #     - intent: request_email
-  #     - action: utter_ask_professor
-  #     - intent: inform_professor_name
-  #     - action: professor_name_form
-  #     - active_loop: professor_name_form
-  #     - slot_was_set:
-  #         - professor_name: Ricardo Gonçalves
-  #     - slot_was_set:
-  #         - requested_slot: null
-  #     - active_loop: null
-  #     - action: action_buscar_professor
-  #     - action: utter_ask_help
+  - story: solicitar contato de professores
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_email
+      - action: utter_ask_professor
+      - intent: inform_professor_name
+      - action: professor_name_form
+      - active_loop: professor_name_form
+      - slot_was_set:
+          - professor_name: Ricardo Gonçalves
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_buscar_professor
+      - action: utter_ask_help
