--- a/domain.yml
+++ b/domain.yml
@@ -12,6 +12,7 @@ intents:
 - request_to_register
 - request_historic
 - request_email
+- inform_professor_name
 
 # - faq:
 #   is_retrieval_intent_: true
@@ -33,10 +34,24 @@ slots:
       entity: PER
       conditions:
       - active_loop: name_form
+  
+  professor_name:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: from_entity
+      entity: PER
+      conditions:
+      - active_loop: name_form
+
 forms:
   name_form:
     required_slots:
     - name
+  professor_name_form:
+    required_slots:
+    - professor_name
+    
 responses:
   utter_greet:
   - text: |-
@@ -47,6 +62,8 @@ responses:
       Qual seu nome?
   utter_ask_name:
   - text: Você poderia informar seu nome?
+  utter_ask_professor_name:
+  - text: Você poderia informar o nome do professor?
   utter_ask_help:
   - text: Em que posso ajudar {name}?
   utter_goodbye:
@@ -54,7 +71,14 @@ responses:
   - text: Até logo :)
   utter_iamabot:
   - text: I am a bot, powered by Rasa.
+  utter_ask_professor:
+  - text: |-
+      Qual o nome do professor?
+      Me informa o nome do professor?
 actions:
 - utter_ask_help
 - utter_goodbye
 - utter_greet
+# custom action
+- action_buscar_professor
+- action_faq_comprovate
