--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -49,7 +49,7 @@ nlu:
   examples: |
     - você é um robo?
     - você é um humano?
-    - estou falando com um robo?
+    - estou falando com um robô?
     - estou falando com um humano?
 
   #### intents personalizadas
@@ -66,25 +66,34 @@ nlu:
     - [thais](PER)
     - [Fernando](PER)
 
+- synonym: atestado
+  examples: |
+    - atestado de matricula
+    - comprovante de matricula
+
 - intent: request_doc_register
   examples: |
+    - atestado
+    - comprovante
     - preciso do meu atestado de matricula
-    - matrícula
     - preciso do meu comprovante de matrícula
     - quero meu comprovante de matricula
-    - preciso do comprovante de frequencia
-    - quais documentos para a matricula
-    - matricula
     - comprovante de matricula
-    - ver matricula
-    - informar comprovante de matricula
+    - mostrar comprovante de matricula
 
-- intent: request_to_register
+- intent: request_do_register
   examples: |
     - quais documentos preciso para fazer a matricula
+    - onde faço a matrícula
+    - como faço a matrícula
+    - onde fazer a matrícula
+    - como fazer a matricula
     - período para fazer a matrícula
     - horário para fazer matricula
     - dias para fazer a matricula
+
+- intent: request_redo_register
+  examples: |
     - dias para fazer a rematricula
     - solicitar rematricula
     - rematricula
@@ -95,6 +104,10 @@ nlu:
     - gostaria do meu historico escolar
     - histórico escolar
     - historico
+    - onde posso pegar meu historico escolar
+    - onde fica o histórico escolar
+    - fornecer historico escolar
+    - 
     
 
 - intent: request_email
@@ -104,6 +117,9 @@ nlu:
     - email do professor [nome_professor]
     - email da professora [nome_professor]
     - contato prof 
+    - e-mail
+    - email
+    - contato
     - profs do IFRS
     - contato dos professores
     - email dos professores do curso [sistemas da informação]
