update: story get professor contact

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,6 +1,5 @@
 version: "3.1"
 nlu:
-#### intents "padrões"
 - intent: greet
   examples: |
     - hey
@@ -51,8 +50,6 @@ nlu:
     - você é um humano?
     - estou falando com um robô?
     - estou falando com um humano?
-
-  #### intents personalizadas
 - intent: inform_name
   examples: |
     - meu nome é [fernando](PER)
@@ -65,12 +62,7 @@ nlu:
     - [fernando](PER)
     - [thais](PER)
     - [Fernando](PER)
-
-- synonym: atestado
-  examples: |
-    - atestado de matricula
-    - comprovante de matricula
-
+    - [Fernando](PER)
 - intent: request_doc_register
   examples: |
     - atestado
@@ -82,8 +74,6 @@ nlu:
     - mostrar comprovante de matricula
     - quero um atestado
     - quero um comprovante
-
-
 - intent: request_do_register
   examples: |
     - quais documentos preciso para fazer a matricula
@@ -95,18 +85,16 @@ nlu:
     - horário para fazer matricula
     - dias para fazer a matricula
     - site para matricula
-
 - intent: request_redo_register
   examples: |
     - dias para fazer a rematrícula
     - solicitar rematricula
     - rematrícula
-    - como fazer a rematricula 
+    - como fazer a rematricula
     - onde faço a rematricula
     - como solicitar rematrícula
     - link da rematricula
     - site para rematrícula
-
 - intent: request_historic
   examples: |
     - gostaria do meu historico escolar
@@ -115,103 +103,29 @@ nlu:
     - onde posso pegar meu historico escolar
     - onde fica o histórico escolar
     - fornecer historico escolar
-
-    
-
+- intent: inform_professor_name
+  examples: |
+    - o nome do professor é [Gustavo Guanabara](PER)
+    - é [Luciano Pedrosa](PER)
+    - o nome dela é [Ana Maria](PER)
+    - [Patrícia dos Santos](PER)
+    - [rodrigo](PER)
+    - [Gustavo Guanabara][{"entity": "PER"}, {"entity": "PER"}]
+    - [Gustavo Guanabara](PER)
 - intent: request_email
   examples: |
-    - e-mail do professor [Gustavo](professor_name)
-    - e-mail da professora [Luciano](professor_name)
-    - email do professor [Patricia](professor_name)
-    - email da professora [Ana](professor_name)
-    - contato prof 
+    - e-mail do professor [Gustavo Guanabara](PER)
+    - e-mail da professora [Luciano](PER)
+    - email do professor [Patricia](PER)
+    - email da professora [Ana Maria](PER)
+    - email dos professores
+    - contato prof
     - e-mail
     - email
     - contato
     - profs do IFRS
     - contato dos professores
-
-
-
-# # novos intents
-# - intent: ask_aulas_geral
-#   examples: |
-#     - preciso da grade de horarios de aulas
-#     - preciso saber das disciplians do semestre
-#     - grade curricular do [primeiro] semestre de [2022]
-#     - grade de disciplinas
-#     - grade de materias
-#     - grade disciplinar
-#     - disciplinas
-#     - grade curricular
-#     - aulas
-#     - materias do [segundo] semestre 
-#     - discplinas [primeiro]
-#     - aulas de [2022]
-#     - informações sobre as aulas
-#     - professores deste semestre [segundo]
-#     - quais professores são no semestre [primeiro]
-#     - professores das disciplinas do [primeiro] semestre
-#     - [primeiro]
-#     - [segundo]
-#     - dia de inicio de aulas
-#     - inicio das aulas
-#     - começo das aulas
-#     - inicio
-#     - reinicio
-#     - aulas comecam no ano (ano)
-#     - aulas começam
-#     - quando aulas começam
-#     - começo
-#     - perído letivo
-#     - início das férias de inverno
-#     - início das férias de verão
-#     - férias
-# - intent: ask_cursos
-#   examples: |
-#     - cursos do IFRS
-#     - cursos do IFRS de Rio Grande
-#     - cursos oferecidos
-#     - cursos ofertados
-#     - cursos disponíveis
-#     - IFRS no rio grande do sul
-#     - IFRS no estado
-#     - Instituto Federal do Rio grande do Sul no estado
-#     - locais de IFRS
-#     - cursos integrantes do IFRS
-#     - cursos de pós-graduação
-#     - quais os cursos livres ofertados
-#     - tipos de cursos
-#     - calendário
-# - intent: ask_documentacao
-#   examples: |
-#     - enviar documentos
-#     - documentos
-#     - quais documentos preciso
-#     - documentos
-#     - solicitar documentos
-#     - documento 
-#     - quais documento
-#     - qual documento
-#     - quais documentos
-#     - colar grau
-#     - documento para colar grau
-#     - o que fazer para colar grau
-#     - inserir publicação
-#     - enviar artigo 
-#     - artigo submeter ao sistema
-# - intent: ask_complementar_estagio
-#   examples: |
-#     - validar hora complementar 
-#     - inserir hora complementar
-#     - quais atividades complementares posso usar
-#     - carga horaria de atividade complementar
-#     - atividades complementares
-#     - o que são horas complementares
-#     - atividades adicionais
-#     - estagio 
-#     - hora de estagio
-#     - fazer estagio
-#     - legislação do estágio
-#     - regimento do IFRS
-#     - regimento
+- synonym: atestado
+  examples: |
+    - atestado de matricula
+    - comprovante de matricula
