--- a/data/stories.yml
+++ b/data/stories.yml
@@ -28,7 +28,10 @@ stories:
       - checkpoint: check_ask_help
       - intent: request_calendar
       - action: utter_ask_calendar
+      - action: calendar_form
       - active_loop: calendar_form
+      - slot_was_set:
+          - calendar_form: calendario
       - slot_was_set:
           - requested_slot: null
       - active_loop: null
@@ -40,10 +43,27 @@ stories:
       - checkpoint: check_ask_help
       - intent: request_courses
       - action: utter_ask_courses
+      - action: courses_form
       - active_loop: courses_form
+      - slot_was_set:
+          - courses_form: automacao
       - slot_was_set:
           - requested_slot: null
       - active_loop: null
       - action: action_buscar_cursos
       - action: utter_ask_help
 
+  - story: solicitar documentos
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_documentation
+      - action: utter_ask_documentation
+      - action: documents_form
+      - active_loop: documents_form
+      - slot_was_set:
+          - documents_form: CPF
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_buscar_documentos
+      - action: utter_ask_help
